--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/riojack/learn-react-simple#readme",
   "devDependencies": {
-    "react": "^15.0.1"
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5",
+    "react": "^15.0.1",
+    "sinon": "^1.17.3"
   },
   "engines": {
     "node": "^4.4.x || ^5.0.x"
