--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/riojack/learn-react-simple#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
     "react": "^15.0.1",
+    "react-addons-test-utils": "^15.0.1",
     "sinon": "^1.17.3"
   },
   "engines": {
