--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Demonstrates a simple, test-driven React UI without Flux pattern or Redux.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/",
+    "example": "node node_modules/webpack-dev-server/bin/webpack-dev-server --content-base example/",
+    "example-windows-chrome": "start chrome http://localhost:8080/index.html && node node_modules/webpack-dev-server/bin/webpack-dev-server --content-base example/"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,7 @@
   },
   "homepage": "https://github.com/riojack/learn-react-simple#readme",
   "devDependencies": {
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
@@ -25,7 +28,10 @@
     "mocha": "^2.4.5",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
-    "sinon": "^1.17.3"
+    "react-dom": "^15.0.1",
+    "sinon": "^1.17.3",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "engines": {
     "node": "^4.4.x || ^5.0.x"
