Adds editing mode to Song component.
 * Adds edit flag to Song, plus test, plus refactoring existing tests.
 * Adds song name to input element, plus test.
 * Fixes: use "defaultValue" instead of "value".
 * Updates example.
 * Changes "npm test" to embedded mocha package.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demonstrates a simple, test-driven React UI without Flux pattern or Redux.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/",
+    "test": "node node_modules/mocha/bin/mocha",
     "example": "node node_modules/webpack-dev-server/bin/webpack-dev-server --content-base example/",
     "example-windows-chrome": "start chrome http://localhost:8080/index.html && node node_modules/webpack-dev-server/bin/webpack-dev-server --content-base example/"
   },
